# aurichallo-plugin

./: .gitignore  AAX_IMPLEMENTATION_GUIDE.md  AAX_INSTALLER_GUIDE.txt  AAX_SETUP.txt  ARCHITECTURE.md  AUDIO_INPUT_STATUS.md  AUDIO_PLAYER_DISABLED.txt  AUDIO_PLAYER_GUIDE.txt  AVID_AAX_SIGNING_GUIDE.md  AuricHalo.jucer  BUILD_NOTES.txt  BUILD_SUCCESS.txt  BUILD_WITH_LICENSE_INSTRUCTIONS.md  CARA_PAKAI_LICENSE_SYSTEM.md  CHANGELOG.txt  CMakeLists.txt  CRASH_FIX.txt  CUBASE_FIX.txt  DIVISION_BY_ZERO_FIX.txt  FINAL_BUILD_STATUS.md  FINAL_RELEASE_SUMMARY.md  FITUR_BARU_METER_OVERSAMPLING.md  FIX_GARAGEBAND_AU.md  INPUT_KNOB_ADDED.md  INPUT_OUTPUT_150_RANGE.md  INSTALLER_FLOW_EXPLAINED.txt  INSTALLER_GUIDE.md  INSTALLER_README.txt  JUCE_PATCH_APPLIED.md  LAUNCH_AURICHALO.command  LICENSE.txt  LICENSE_NO_TRIAL.md  LICENSE_SYSTEM_GUIDE.md  LICENSE_SYSTEM_GUIDE.txt  LICENSE_SYSTEM_SUMMARY.md  MACOS_BUILD_COMPLETE_GUIDE.txt  MACOS_BUILD_GUIDE.txt  MACOS_READY.txt  MAC_AUDIO_INPUT_FIX_FINAL.md  MAC_RELEASE_GUIDE.md  (+43 more)
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
cmake/: JUCEConfig.cmake  PlatformConfig.cmake
installer/: build-installer.sh
scripts/: build_all_and_installer.bat  build_and_package_mac.sh  build_and_package_windows.bat  build_installer_windows.bat  build_mac.sh  build_release_windows.bat  create_mac_installer.sh  debug_license.py  env_example.sh  generate_batch_licenses.py  generate_license_key.bat  install_aax_local.bat  one_click_build_mac.sh  one_click_build_win.bat  setup_mac_scripts.sh  test_standalone.sh  test_with_logs.sh  verify_aax_64bit.bat
source/: AuricHaloEditor.cpp  (+11 more)
(+38 files in other folders)
